EventForceManagementSystem/force-app/main/default/objects/Room__c/fields/Default_Nightly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Default_Nightly_Cost__c</fullName>
    <description>This is the default per night cost of the room.</description>
    <label>Default Nightly Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>