EventForceManagementSystem/force-app/main/default/objects/Room__c/fields/Room_Number_Only__c.field-meta.xml
<CustomField>
    <fullName>Room_Number_Only__c</fullName>
    <description>This removes the</description>
    <formula>SUBSTITUTE(Name, &quot;Room &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Number Only</label>
    <type>Text</type>
</CustomField>