EventForceManagementSystem/force-app/main/default/objects/Room__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This reflects the type of room.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Standard Suite</fullName>
            </value>
            <value>
                <fullName>Junior Suite</fullName>
            </value>
            <value>
                <fullName>Presidential Suite</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>